## Process this file with automake to create a Makefile.in
##
## Copyright (c) TC TrustCenter for Security in Data Networks GmbH - all rights reserved
## RCSID:       $Id$
## Source:      $Source$
## Last Delta:  $Date$ $Revision$ $Author$
## State:       $State$ $Locker$
## NAME:        Makefile.am
## SYNOPSIS:    -
## DESCRIPTION: -
## FILES:       -
## SEE/ALSO:    -
## AUTHOR:      lbe
## BUGS: *      -
## HISTORY:     $Log$
## HISTORY:     Revision 1.1  1999/06/04 15:16:57  lbe
## HISTORY:     change to libtool/automake complete (except for __umoddi prob)
## HISTORY:
## HISTORY:     Revision 1.1  1998/10/12 11:30:37  lbe
## HISTORY:     clampdown
## HISTORY:
## 

EXTRA_DIST= gpkcs11.rc.dist