dnl Process this file with autoconf to produce a configure script.
dnl very small right now, but will have to grow witht the test system.

AC_INIT(README)
AC_CANONICAL_SYSTEM

dnl AC_CONFIG_HEADER(calc.h)
dnl CC=${CC-cc}
 
#
# Look for various header files
#
dnl AC_HEADER_CHECK(stdlib.h, ,AC_DEFINE(HAVE_STDLIB_H))
 
#
# Look for various functions
#
dnl AC_FUNC_CHECK(strcmp, AC_DEFINE(HAVE_STRCMP))
 
#
# Output Makefile with substitutions
AC_SUBST(CC)
AC_SUBST(host_os)
AC_SUBST(host_alias)
AC_SUBST(host_cpu)
AC_SUBST(host_vendor)
AC_SUBST(target_os)
AC_SUBST(target_alias)
AC_SUBST(target_cpu)
AC_SUBST(target_vendor)
AC_SUBST(host_canonical)
AC_SUBST(target_canonical)
AC_OUTPUT(Makefile)
