dnl Process this file with autoconf to produce a configure script.
dnl
dnl This file is part of GPKCS11. 
dnl (c) 1999-2001 TC TrustCenter GmbH 
dnl
dnl GPKCS11 is free softwarednl you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundationdnl either version 2, or (at your option)
dnl any later version.
dnl  
dnl GPKCS11 is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl  
dnl You should have received a copy of the GNU General Public License
dnl along with GPKCS11; see the file COPYING.  If not, write to the Free
dnl Software Foundation, 59 Temple Place - Suite 330, Boston, MA 02111, USA.  
dnl
dnl RCSID:       $Id$
dnl Source:      $Source$
dnl Last Delta:  $Date$ $Revision$ $Author$
dnl State:       $State$ $Locker$
dnl NAME:        configure.in
dnl SYNOPSIS:    -
dnl DESCRIPTION: configure the testing subsystem
dnl FILES:       -
dnl SEE/ALSO:    -
dnl AUTHOR:      lbe
dnl BUGS:        -
dnl
dnl very small right now, but will have to grow witht the test system.

AC_INIT(README)
AC_CANONICAL_SYSTEM

dnl AC_CONFIG_HEADER(calc.h)
dnl CC=${CC-cc}
 
#
# Look for various header files
#
dnl AC_HEADER_CHECK(stdlib.h, ,AC_DEFINE(HAVE_STDLIB_H))
 
#
# Look for various functions
#
dnl AC_FUNC_CHECK(strcmp, AC_DEFINE(HAVE_STRCMP))
 
#
# Output Makefile with substitutions
AC_SUBST(CC)
AC_SUBST(host_os)
AC_SUBST(host_alias)
AC_SUBST(host_cpu)
AC_SUBST(host_vendor)
AC_SUBST(target_os)
AC_SUBST(target_alias)
AC_SUBST(target_cpu)
AC_SUBST(target_vendor)
AC_SUBST(host_canonical)
AC_SUBST(target_canonical)
AC_OUTPUT(Makefile)
